--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "arco-vue-book": "^0.1.7",
     "core-js": "^3.8.3",
+    "m-page-flip": "^2.0.2",
+    "page-flip": "^2.0.7",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -18,6 +21,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss-pxtorem": "^6.0.0"
   }
 }
